added jpeg files and styling method for images

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
+				<style>
+			/* Quick Fix: Limit all images to 300px width max */
+			img {
+				max-width: 300px;
+				width: 100%;
+				height: auto;
+			}
+		</style>
+		
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
@@ -55,7 +65,7 @@
 										</div>
 										<div class="col-4 col-12-medium">
 											<section>
-												<a href="phones.html" class="image featured"><img src="images/pic01.jpg" alt="Phones" /></a>
+												<a href="phones.html" class="image featured"><img src="iphone-12_n.jpg" alt="Phones" /></a>
 												<header class="second icon solid fa-mobile-alt">
 													<h3>Phones</h3>
 													<p>The latest smartphones and accessories</p>
@@ -64,7 +74,7 @@
 										</div>
 										<div class="col-4 col-12-medium">
 											<section>
-												<a href="shoes.html" class="image featured"><img src="images/pic02.jpg" alt="Shoes" /></a>
+												<a href="shoes.html" class="image featured"><img src="various-shoes.jpg" alt="Shoes" /></a>
 												<header class="second icon solid fa-shoe-prints">
 													<h3>Shoes</h3>
 													<p>Step up your style with our footwear</p>
@@ -73,7 +83,7 @@
 										</div>
 										<div class="col-4 col-12-medium">
 											<section>
-												<a href="cars.html" class="image featured"><img src="images/pic03.jpg" alt="Cars" /></a>
+												<a href="cars.html" class="image featured"><img src="istockphoto-cars.jpg" alt="Cars" /></a>
 												<header class="second icon solid fa-car">
 													<h3>Cars</h3>
 													<p>Drive your dreams with our vehicle selection</p>
@@ -132,18 +142,18 @@
 												<h2 class="icon fa-star">Popular Items This Week</h2>
 
 												<article class="box excerpt">
-														<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
+														<a href="#" class="image left"><img src="apple-iphone-16-pro-max-2.jpg" alt="" /></a>
 														<div>
 															<header>
 																<span class="date">New!</span>
-																<h3><a href="#">The X1 Pro Smartphone</a></h3>
+																<h3><a href="#">View our Top sellers</a></h3>
 															</header>
-															<p>Experience blazing-fast performance and an incredible camera with our top-selling X1 Pro. Limited stock available!</p>
+															<p>Experience blazing-fast performance and an incredible camera with our top-selling Apple devices. Limited stock available!</p>
 														</div>
 													</article>
 
 												<article class="box excerpt">
-														<a href="#" class="image left"><img src="images/pic05.jpg" alt="" /></a>
+														<a href="#" class="image left"><img src="various-shoes.jpg" alt="shoes" /></a>
 														<div>
 															<header>
 																<span class="date">Trending</span>
@@ -154,11 +164,11 @@
 													</article>
 
 												<article class="box excerpt">
-														<a href="#" class="image left"><img src="images/pic06.jpg" alt="" /></a>
+														<a href="#" class="image left"><img src="corolla15.jpg" alt="Car photo" /></a>
 														<div>
 															<header>
 																<span class="date">Hot Deal</span>
-																<h3><a href="#">Luxury Sedan 2024 Model</a></h3>
+																<h3><a href="#">Luxury Sedan 2025 Model</a></h3>
 															</header>
 															<p>Drive in style and luxury with our latest sedan model. Advanced features and unparalleled comfort await.</p>
 														</div>
@@ -171,10 +181,10 @@
 										<section class="box spotlight">
 												<h2 class="icon fa-comments">What Our Customers Say</h2>
 												<article>
-													<a href="#" class="image featured"><img src="images/pic07.jpg" alt=""></a>
+													<a href="#" class="image featured"><img src="chimm.jpg" alt=""></a>
 													<header>
 														<h3><a href="#">"Amazing Service!"</a></h3>
-														<p>Happy Customer from Lagos</p>
+														<p>Elizabeth from Abuja</p>
 													</header>
 													<p>"Shopping at Ade's Store was a fantastic experience. The products are high quality, and the delivery was incredibly fast. I highly recommend them!"</p>
 													<p>"I found exactly what I needed, and the customer support was very helpful. Will definitely be shopping here again."</p>
